SONARPY-1745 Update remaining usages of Collectors.toList() to toList() (#1755)