@@ -78,6 +78,6 @@ public class AliasedNameImpl extends PyTree implements AliasedName {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(dottedName, asKeyword, alias).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(dottedName, asKeyword, alias).filter(Objects::nonNull).toList();
   }
 }
