@@ -56,7 +56,7 @@ public class AwaitExpressionImpl extends PyTree implements AwaitExpression {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(awaitToken, expression).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(awaitToken, expression).filter(Objects::nonNull).toList();
   }
 
   @Override
