@@ -67,7 +67,7 @@ public class ComprehensionIfImpl extends PyTree implements ComprehensionIf {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(ifToken, condition, nestedClause).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(ifToken, condition, nestedClause).filter(Objects::nonNull).toList();
   }
 
   @Override
