@@ -69,6 +69,6 @@ public class FinallyClauseImpl extends PyTree implements FinallyClause {
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(finallyKeyword, colon, newLine, indent, body, dedent).filter(Objects::nonNull).collect(Collectors.toList());
+    return Stream.of(finallyKeyword, colon, newLine, indent, body, dedent).filter(Objects::nonNull).toList();
   }
 }
