@@ -71,7 +71,7 @@ public class QualifiedExpressionImpl extends PyTree implements QualifiedExpressi
 
   @Override
   public List<Tree> computeChildren() {
-    return Stream.of(qualifier, dotToken, name).collect(Collectors.toList());
+    return Stream.of(qualifier, dotToken, name).toList();
   }
 
   @Override
